crates/pg_syntax/tests/snapshots/postgres_regress/json@450.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ts_headline('{\"a\": \"aaa bbb\", \"b\": {\"c\": \"ccc ddd fff\", \"c1\": \"ccc1 ddd1\"}, \"d\": [\"ggg hhh\", \"iii jjj\"]}'::json, tsquery('bbb & ddd & hhh'), 'StartSel = <, StopSel = >');"
---
SelectStmt@0..177
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..175
    FuncCall@7..175
      Ident@7..18 "ts_headline"
      Ascii40@18..19 "("
      TypeCast@19..118
        AConst@19..112
          Sconst@19..112 "'{\"a\": \"aaa bbb\", \"b\" ..."
        Typecast@112..114 "::"
        TypeName@114..118
          Ident@114..118 "json"
      Ascii44@118..119 ","
      Whitespace@119..120 " "
      FuncCall@120..145
        Ident@120..127 "tsquery"
        Ascii40@127..128 "("
        AConst@128..145
          Sconst@128..145 "'bbb & ddd & hhh'"
      Ascii41@145..146 ")"
      Ascii44@146..147 ","
      Whitespace@147..148 " "
      AConst@148..175
        Sconst@148..175 "'StartSel = <, StopSe ..."
  Ascii41@175..176 ")"
  Ascii59@176..177 ";"

