crates/pg_syntax/tests/snapshots/postgres_regress/json@451.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ts_headline('english', '{\"a\": \"aaa bbb\", \"b\": {\"c\": \"ccc ddd fff\", \"c1\": \"ccc1 ddd1\"}, \"d\": [\"ggg hhh\", \"iii jjj\"]}'::json, tsquery('bbb & ddd & hhh'), 'StartSel = <, StopSel = >');"
---
SelectStmt@0..188
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..186
    FuncCall@7..186
      Ident@7..18 "ts_headline"
      Ascii40@18..19 "("
      AConst@19..28
        Sconst@19..28 "'english'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      TypeCast@30..129
        AConst@30..123
          Sconst@30..123 "'{\"a\": \"aaa bbb\", \"b\" ..."
        Typecast@123..125 "::"
        TypeName@125..129
          Ident@125..129 "json"
      Ascii44@129..130 ","
      Whitespace@130..131 " "
      FuncCall@131..156
        Ident@131..138 "tsquery"
        Ascii40@138..139 "("
        AConst@139..156
          Sconst@139..156 "'bbb & ddd & hhh'"
      Ascii41@156..157 ")"
      Ascii44@157..158 ","
      Whitespace@158..159 " "
      AConst@159..186
        Sconst@159..186 "'StartSel = <, StopSe ..."
  Ascii41@186..187 ")"
  Ascii59@187..188 ";"

