crates/pg_syntax/tests/snapshots/postgres_regress/json@454.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ts_headline('[]'::json, tsquery('aaa & bbb'));"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..18 "ts_headline"
      Ascii40@18..19 "("
      TypeCast@19..29
        AConst@19..23
          Sconst@19..23 "'[]'"
        Typecast@23..25 "::"
        TypeName@25..29
          Ident@25..29 "json"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      FuncCall@31..50
        Ident@31..38 "tsquery"
        Ascii40@38..39 "("
        AConst@39..50
          Sconst@39..50 "'aaa & bbb'"
  Ascii41@50..51 ")"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

