crates/pg_syntax/tests/snapshots/postgres_regress/json@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT array_to_json(array_agg(q),false) from (select x as b, x * 2 as c from generate_series(1,3) x) q;"
---
SelectStmt@0..104
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..20 "array_to_json"
      Ascii40@20..21 "("
      FuncCall@21..32
        Ident@21..30 "array_agg"
        Ascii40@30..31 "("
        ColumnRef@31..32
          Ident@31..32 "q"
      Ascii41@32..33 ")"
      Ascii44@33..34 ","
      AConst@34..39
        FalseP@34..39 "false"
  Ascii41@39..40 ")"
  Whitespace@40..41 " "
  From@41..45 "from"
  Whitespace@45..46 " "
  Ascii40@46..47 "("
  RangeSubselect@47..103
    SelectStmt@47..100
      Select@47..53 "select"
      Whitespace@53..54 " "
      ResTarget@54..60
        ColumnRef@54..55
          Ident@54..55 "x"
        Whitespace@55..56 " "
        As@56..58 "as"
        Whitespace@58..59 " "
        Ident@59..60 "b"
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      ResTarget@62..72
        AExpr@62..67
          ColumnRef@62..63
            Ident@62..63 "x"
          Whitespace@63..64 " "
          Ascii42@64..65 "*"
          Whitespace@65..66 " "
          AConst@66..67
            Iconst@66..67 "2"
        Whitespace@67..68 " "
        As@68..70 "as"
        Whitespace@70..71 " "
        Ident@71..72 "c"
      Whitespace@72..73 " "
      From@73..77 "from"
      Whitespace@77..78 " "
      RangeFunction@78..100
        List@78..97
          FuncCall@78..97
            Ident@78..93 "generate_series"
            Ascii40@93..94 "("
            AConst@94..95
              Iconst@94..95 "1"
            Ascii44@95..96 ","
            AConst@96..97
              Iconst@96..97 "3"
        Ascii41@97..98 ")"
        Whitespace@98..99 " "
        Alias@99..100
          Ident@99..100 "x"
    Ascii41@100..101 ")"
    Whitespace@101..102 " "
    Alias@102..103
      Ident@102..103 "q"
  Ascii59@103..104 ";"

