crates/pg_syntax/tests/snapshots/postgres_regress/json@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT array_to_json(array_agg(q),true) from (select x as b, x * 2 as c from generate_series(1,3) x) q;"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..20 "array_to_json"
      Ascii40@20..21 "("
      FuncCall@21..32
        Ident@21..30 "array_agg"
        Ascii40@30..31 "("
        ColumnRef@31..32
          Ident@31..32 "q"
      Ascii41@32..33 ")"
      Ascii44@33..34 ","
      AConst@34..38
        TrueP@34..38 "true"
  Ascii41@38..39 ")"
  Whitespace@39..40 " "
  From@40..44 "from"
  Whitespace@44..45 " "
  Ascii40@45..46 "("
  RangeSubselect@46..102
    SelectStmt@46..99
      Select@46..52 "select"
      Whitespace@52..53 " "
      ResTarget@53..59
        ColumnRef@53..54
          Ident@53..54 "x"
        Whitespace@54..55 " "
        As@55..57 "as"
        Whitespace@57..58 " "
        Ident@58..59 "b"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      ResTarget@61..71
        AExpr@61..66
          ColumnRef@61..62
            Ident@61..62 "x"
          Whitespace@62..63 " "
          Ascii42@63..64 "*"
          Whitespace@64..65 " "
          AConst@65..66
            Iconst@65..66 "2"
        Whitespace@66..67 " "
        As@67..69 "as"
        Whitespace@69..70 " "
        Ident@70..71 "c"
      Whitespace@71..72 " "
      From@72..76 "from"
      Whitespace@76..77 " "
      RangeFunction@77..99
        List@77..96
          FuncCall@77..96
            Ident@77..92 "generate_series"
            Ascii40@92..93 "("
            AConst@93..94
              Iconst@93..94 "1"
            Ascii44@94..95 ","
            AConst@95..96
              Iconst@95..96 "3"
        Ascii41@96..97 ")"
        Whitespace@97..98 " "
        Alias@98..99
          Ident@98..99 "x"
    Ascii41@99..100 ")"
    Whitespace@100..101 " "
    Alias@101..102
      Ident@101..102 "q"
  Ascii59@102..103 ";"

