crates/pg_syntax/tests/snapshots/postgres_regress/json@54.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT array_to_json(array_agg(q),false)\n  FROM ( SELECT $$a$$ || x AS b, y AS c,\n               ARRAY[ROW(x.*,ARRAY[1,2,3]),\n               ROW(y.*,ARRAY[4,5,6])] AS z\n         FROM generate_series(1,2) x,\n              generate_series(4,5) y) q;"
---
SelectStmt@0..247
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..20 "array_to_json"
      Ascii40@20..21 "("
      FuncCall@21..32
        Ident@21..30 "array_agg"
        Ascii40@30..31 "("
        ColumnRef@31..32
          Ident@31..32 "q"
      Ascii41@32..33 ")"
      Ascii44@33..34 ","
      AConst@34..39
        FalseP@34..39 "false"
  Ascii41@39..40 ")"
  Newline@40..41 "\n"
  Whitespace@41..43 "  "
  From@43..47 "FROM"
  Whitespace@47..48 " "
  Ascii40@48..49 "("
  Whitespace@49..50 " "
  RangeSubselect@50..246
    SelectStmt@50..243
      Select@50..56 "SELECT"
      Whitespace@56..57 " "
      ResTarget@57..72
        AExpr@57..67
          AConst@57..62
            Sconst@57..62 "$$a$$"
          Whitespace@62..63 " "
          Op@63..65 "||"
          Whitespace@65..66 " "
          ColumnRef@66..67
            Ident@66..67 "x"
        Whitespace@67..68 " "
        As@68..70 "AS"
        Whitespace@70..71 " "
        Ident@71..72 "b"
      Ascii44@72..73 ","
      Whitespace@73..74 " "
      ResTarget@74..80
        ColumnRef@74..75
          Ident@74..75 "y"
        Whitespace@75..76 " "
        As@76..78 "AS"
        Whitespace@78..79 " "
        Ident@79..80 "c"
      Ascii44@80..81 ","
      Newline@81..82 "\n"
      Whitespace@82..97 "               "
      ResTarget@97..168
        AArrayExpr@97..160
          Array@97..102 "ARRAY"
          Ascii91@102..103 "["
          RowExpr@103..122
            Row@103..106 "ROW"
            Ascii40@106..107 "("
            ColumnRef@107..110
              Ident@107..108 "x"
              Ascii46@108..109 "."
              AStar@109..110
                Ascii42@109..110 "*"
            Ascii44@110..111 ","
            AArrayExpr@111..122
              Array@111..116 "ARRAY"
              Ascii91@116..117 "["
              AConst@117..118
                Iconst@117..118 "1"
              Ascii44@118..119 ","
              AConst@119..120
                Iconst@119..120 "2"
              Ascii44@120..121 ","
              AConst@121..122
                Iconst@121..122 "3"
          Ascii93@122..123 "]"
          Ascii41@123..124 ")"
          Ascii44@124..125 ","
          Newline@125..126 "\n"
          Whitespace@126..141 "               "
          RowExpr@141..160
            Row@141..144 "ROW"
            Ascii40@144..145 "("
            ColumnRef@145..148
              Ident@145..146 "y"
              Ascii46@146..147 "."
              AStar@147..148
                Ascii42@147..148 "*"
            Ascii44@148..149 ","
            AArrayExpr@149..160
              Array@149..154 "ARRAY"
              Ascii91@154..155 "["
              AConst@155..156
                Iconst@155..156 "4"
              Ascii44@156..157 ","
              AConst@157..158
                Iconst@157..158 "5"
              Ascii44@158..159 ","
              AConst@159..160
                Iconst@159..160 "6"
        Ascii93@160..161 "]"
        Ascii41@161..162 ")"
        Ascii93@162..163 "]"
        Whitespace@163..164 " "
        As@164..166 "AS"
        Whitespace@166..167 " "
        Ident@167..168 "z"
      Newline@168..169 "\n"
      Whitespace@169..178 "         "
      From@178..182 "FROM"
      Whitespace@182..183 " "
      RangeFunction@183..205
        List@183..202
          FuncCall@183..202
            Ident@183..198 "generate_series"
            Ascii40@198..199 "("
            AConst@199..200
              Iconst@199..200 "1"
            Ascii44@200..201 ","
            AConst@201..202
              Iconst@201..202 "2"
        Ascii41@202..203 ")"
        Whitespace@203..204 " "
        Alias@204..205
          Ident@204..205 "x"
      Ascii44@205..206 ","
      Newline@206..207 "\n"
      Whitespace@207..221 "              "
      RangeFunction@221..243
        List@221..240
          FuncCall@221..240
            Ident@221..236 "generate_series"
            Ascii40@236..237 "("
            AConst@237..238
              Iconst@237..238 "4"
            Ascii44@238..239 ","
            AConst@239..240
              Iconst@239..240 "5"
        Ascii41@240..241 ")"
        Whitespace@241..242 " "
        Alias@242..243
          Ident@242..243 "y"
    Ascii41@243..244 ")"
    Whitespace@244..245 " "
    Alias@245..246
      Ident@245..246 "q"
  Ascii59@246..247 ";"

