crates/pg_syntax/tests/snapshots/postgres_regress/json@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT array_to_json(array_agg(x),false) from generate_series(5,10) x;"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..20 "array_to_json"
      Ascii40@20..21 "("
      FuncCall@21..32
        Ident@21..30 "array_agg"
        Ascii40@30..31 "("
        ColumnRef@31..32
          Ident@31..32 "x"
      Ascii41@32..33 ")"
      Ascii44@33..34 ","
      AConst@34..39
        FalseP@34..39 "false"
  Ascii41@39..40 ")"
  Whitespace@40..41 " "
  From@41..45 "from"
  Whitespace@45..46 " "
  RangeFunction@46..69
    List@46..66
      FuncCall@46..66
        Ident@46..61 "generate_series"
        Ascii40@61..62 "("
        AConst@62..63
          Iconst@62..63 "5"
        Ascii44@63..64 ","
        AConst@64..66
          Iconst@64..66 "10"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    Alias@68..69
      Ident@68..69 "x"
  Ascii59@69..70 ";"

